--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "Hashtag-server",
+  "name": "hashtag-backend",
   "version": "1.0.0",
+  "description": "Backend for Hashtag user authentication using Node.js and MongoDB Cloud",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^7.6.0",
+    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2"
   }
 }
